src/tests/snapshots/mu__tests__fn_call_kw__kw_missing.snap
---
source: src/tests/fn_call_kw.rs
expression: snapshot
---
# Input:
fn f(*, a):
  print a

f()


# Result (error):
In code at 0..0
Error: mismatched keyword params: missing a


# Stdout:


