src/tests/snapshots/mu__tests__fn_call_kw__kw_order_independence.snap
---
source: src/tests/fn_call_kw.rs
expression: snapshot
---
# Input:
fn f(*, a, b):
  print a, b

f(a=1, b=2)
f(b=2, a=1)


# Result (success):
none

# Stdout:
1 2
1 2


